--- a/templates/help.html
+++ b/templates/help.html
@@ -10,7 +10,8 @@
     <h2>About</h2>
     <p>
         Application is developed in support of the University of Belgrade doctoral dissertation
-        <i>Composite pseudogrammars based on parallel language models of Serbian</i> by Mihailo Škorić.
+        <i>Composite pseudogrammars based on parallel language models of Serbian</i> by Mihailo Škorić,
+        under the supervision of Ranka Stanković.
     </p>
     <p>
         Usage instructions are shown bellow for each of three usage scenarios:
