--- a/templates/help.html
+++ b/templates/help.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div>
-    <h2>About</h2>
+    <h2>About PaLMA</h2>
     <p>
         Application is developed in support of the University of Belgrade doctoral dissertation
         <i>Composite pseudogrammars based on parallel language models of Serbian</i> by Mihailo Škorić,
